turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: '=' expected but ';' found.
  while(n < 12000){
^